--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>    
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackcloudsblogs.github.io/Savor-the-Rich-Flavors-of-India-A-Culinary-Journey-at-Top-of-India/">https://cloudstackcloudsblogs.github.io/Savor-the-Rich-Flavors-of-India-A-Culinary-Journey-at-Top-of-India/</a><br>    
+                <a target="_bLank" href="https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Top+of+India/Savor+the+Rich+Flavors+of+India:+A+Culinary+Journey+at+Top+of+India/index.html">https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Top+of+India/Savor+the+Rich+Flavors+of+India:+A+Culinary+Journey+at+Top+of+India/index.html</a><br>
+                <a target="_bLank" href="https://savor-the-rich-flavor-git-3f7d0a-cloudstackcloudsblogs-projects.vercel.app/">https://savor-the-rich-flavor-git-3f7d0a-cloudstackcloudsblogs-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://profound-marzipan-bb9851.netlify.app/">https://profound-marzipan-bb9851.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
